# Hide-and-Seek-and-Shoot

./: CMakeLists.txt  README.md  TODO  main.cpp  run.sh
Game/: ControlState.cpp  ControlState.h  Game.cpp  Game.h  World.cpp  World.h
Game/Entities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  FieldOfView.cpp  FieldOfView.h  Gun.cpp  Gun.h  Person.cpp  Person.h  Player.cpp  Player.h
Game/config/: bullet.conf  controls.conf  enemy.conf  game.conf  gun.conf  person.conf  player.conf  walls.conf
Game/resources/: ResourceHandler.hpp  ResourceIDs.hpp
Game/utils/: configUtils.hpp  geometryUtils.hpp  textureUtils.hpp
concept/: high-level  low-level
concept/pseudocode/: Bullet  ControlState  Enemy  Game  Person  Player  World
